--- a/win32/projects/portmap/portmap.vcxproj
+++ b/win32/projects/portmap/portmap.vcxproj
@@ -10,64 +10,19 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\librpc\authunix.c" />
-    <ClCompile Include="..\..\librpc\Auth_non.c" />
-    <ClCompile Include="..\..\librpc\Auth_uni.c" />
-    <ClCompile Include="..\..\librpc\bcopy.c" />
-    <ClCompile Include="..\..\librpc\Bindresv.c" />
-    <ClCompile Include="..\..\librpc\clnt_gen.c" />
-    <ClCompile Include="..\..\librpc\Clnt_per.c" />
-    <ClCompile Include="..\..\librpc\clnt_raw.c" />
-    <ClCompile Include="..\..\librpc\clnt_sim.c" />
-    <ClCompile Include="..\..\librpc\Clnt_tcp.c" />
-    <ClCompile Include="..\..\librpc\Clnt_udp.c" />
-    <ClCompile Include="..\..\librpc\Getrpcen.c" />
-    <ClCompile Include="..\..\librpc\Getrpcpo.c" />
-    <ClCompile Include="..\..\librpc\Get_myad.c" />
-    <ClCompile Include="..\..\librpc\nt.c" />
-    <ClCompile Include="..\..\librpc\Pmap_cln.c" />
-    <ClCompile Include="..\..\librpc\pmap_get.c" />
-    <ClCompile Include="..\..\librpc\pmap_gma.c" />
-    <ClCompile Include="..\..\librpc\pmap_pr.c" />
-    <ClCompile Include="..\..\librpc\pmap_pro.c" />
-    <ClCompile Include="..\..\librpc\Pmap_rmt.c" />
-    <ClCompile Include="..\..\librpc\rpc_call.c" />
-    <ClCompile Include="..\..\librpc\rpc_comm.c" />
-    <ClCompile Include="..\..\librpc\rpc_prot.c" />
-    <ClCompile Include="..\..\librpc\Svc.c" />
-    <ClCompile Include="..\..\librpc\svc_auth.c" />
-    <ClCompile Include="..\..\librpc\Svc_autu.c" />
-    <ClCompile Include="..\..\librpc\svc_raw.c" />
-    <ClCompile Include="..\..\librpc\Svc_run.c" />
-    <ClCompile Include="..\..\librpc\Svc_simp.c" />
-    <ClCompile Include="..\..\librpc\Svc_tcp.c" />
-    <ClCompile Include="..\..\librpc\Svc_udp.c" />
-    <ClCompile Include="..\..\librpc\Xdr.c" />
-    <ClCompile Include="..\..\librpc\Xdr_arra.c" />
-    <ClCompile Include="..\..\librpc\xdr_floa.c" />
-    <ClCompile Include="..\..\librpc\xdr_mem.c" />
-    <ClCompile Include="..\..\librpc\Xdr_rec.c" />
-    <ClCompile Include="..\..\librpc\Xdr_refe.c" />
-    <ClCompile Include="..\..\librpc\xdr_stdi.c" />
-    <ClCompile Include="..\..\librpc\Xdr_strarr.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\librpc\all_oncrpc.h" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{1D1F3B25-5740-4634-A8B7-E075C73AFBB2}</ProjectGuid>
+    <ProjectGuid>{F275B682-06CC-4A21-985F-9B862D5E82BF}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>librpc</RootNamespace>
+    <RootNamespace>portmap</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
@@ -82,24 +37,27 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <LinkIncremental>true</LinkIncremental>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <LinkIncremental>false</LinkIncremental>
+    <LibraryPath>..\..\bin;$(VCInstallDir)lib;$(VCInstallDir)atlmfc\lib;$(WindowsSdkDir)lib;$(FrameworkSDKDir)\lib</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PrecompiledHeader>
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>..\..\include</AdditionalIncludeDirectories>
-      <CompileAs>Default</CompileAs>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>librpc.lib;wsock32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
-    <Lib>
-      <OutputFile>..\..\bin\$(TargetName)$(TargetExt)</OutputFile>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -109,19 +67,21 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>..\..\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <OutputFile>..\..\bin\pm_ascii.exe</OutputFile>
+      <AdditionalDependencies>librpc.lib;wsock32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
-    <Lib>
-      <OutputFile>..\..\bin\$(TargetName)$(TargetExt)</OutputFile>
-    </Lib>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\librpc\portmap.c" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
