[WIN32] added project file for rpcgen. renamed librpc.lib to oncrpc.lib.

--- a/win32/projects/librpc/librpc.vcxproj
+++ b/win32/projects/librpc/librpc.vcxproj
@@ -98,7 +98,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <OutputFile>..\..\bin\$(TargetName)$(TargetExt)</OutputFile>
+      <OutputFile>..\..\bin\oncrpc.lib</OutputFile>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -119,7 +119,7 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <Lib>
-      <OutputFile>..\..\bin\$(TargetName)$(TargetExt)</OutputFile>
+      <OutputFile>..\..\bin\oncrpc.lib</OutputFile>
     </Lib>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
